generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id            Int       @id @default(autoincrement())
  email         String    @unique
  passwordHash  String
  role          String    @default("user")
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  wallet        Wallet?
  transactions  Transaction[]
  subscription  Subscription?
  notifications Notification[]
}

model Wallet {
  id         Int           @id @default(autoincrement())
  userId     Int           @unique
  address    String        @unique
  balance    Decimal       @default(0)
  staked     Decimal       @default(0)
  rewards    Decimal       @default(0)
  createdAt  DateTime      @default(now())
  updatedAt  DateTime      @updatedAt
  user       User          @relation(fields: [userId], references: [id])
  txs        Transaction[]
}

model Transaction {
  id         Int       @id @default(autoincrement())
  walletId   Int
  userId     Int
  type       String
  token      String     @default("OGC")
  amount     Decimal
  txHash     String?    @unique
  chainId    Int        @default(137)
  status     String     @default("pending")
  createdAt  DateTime   @default(now())
  updatedAt  DateTime   @updatedAt
  wallet     Wallet     @relation(fields: [walletId], references: [id])
  user       User       @relation(fields: [userId], references: [id])
}

model Subscription {
  id         Int       @id @default(autoincrement())
  userId     Int       @unique
  plan       String    @default("Free")
  status     String    @default("inactive")
  expiresAt  DateTime?
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt
  user       User      @relation(fields: [userId], references: [id])
}

model Notification {
  id         Int       @id @default(autoincrement())
  userId     Int
  type       String
  payload    Json
  status     String    @default("queued")
  createdAt  DateTime  @default(now())
  user       User      @relation(fields: [userId], references: [id])
}

